Made class JDK8 compatible